--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "author": "Statistics Norway",
   "dependencies": {
+    "ace-builds": "^1.4.12",
     "axios": "^0.21.0",
     "axios-hooks": "^2.1.0",
     "react": "^17.0.2",
+    "react-ace": "^9.4.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.0",
     "semantic-ui-react": "^2.0.0",
