--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#f0f8f9",
-  "background_color": "#f0f8f9"
+  "theme_color": "#fff",
+  "background_color": "#fff"
 }
