--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   },
   "author": "Statistics Norway",
   "dependencies": {
+    "@statisticsnorway/dapla-js-utilities": "^0.2.9",
     "ace-builds": "^1.4.12",
-    "axios": "^0.21.0",
-    "axios-hooks": "^2.1.0",
+    "axios": "^0.21.1",
+    "axios-hooks": "^2.6.3",
     "react": "^17.0.2",
-    "react-ace": "^9.4.0",
+    "react-ace": "^9.4.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "semantic-ui-css": "^2.4.0",
-    "semantic-ui-react": "^2.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -28,7 +29,10 @@
     "coverage": "react-scripts test --coverage --watchAll=false"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -50,11 +54,10 @@
     }
   ],
   "devDependencies": {
-    "@beam-australia/react-env": "^3.0.8",
-    "@statisticsnorway/dapla-js-utilities": "^0.2.1",
-    "@testing-library/jest-dom": "^5.7.0",
-    "@testing-library/react": "^11.0.0",
-    "@testing-library/user-event": "^13.1.8"
+    "@beam-australia/react-env": "^3.1.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -64,7 +67,8 @@
       "!src/configurations/**",
       "!src/enums/**",
       "!src/__tests__/test-data/**",
-      "!src/components/files/**"
+      "!src/components/files/**",
+      "!src/components/steps/**"
     ],
     "coverageThreshold": {
       "global": {
