--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**, *
 sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**, **/configurations/**
 sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**, **/configurations/**
 sonar.cpd.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**, **/configurations/**, **/__tests__/**
-sonar.coverage.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**, **/configurations/**, **/__tests__/**, **/index.js, **/setupTests.js, **/components/files/**, **/components/steps/**
+sonar.coverage.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**, **/configurations/**, **/__tests__/**, **/index.js, **/setupTests.js, **/components/files/**, **/components/steps/**, **/components/status/**
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
