Add "MagicMode" which does all steps from sas-agent scan to operation initiation with just one click, available if not in advanced user mode

--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
       "!src/__tests__/test-data/**",
       "!src/components/files/**",
       "!src/components/steps/**",
-      "!src/components/status/**"
+      "!src/components/status/**",
+      "!src/components/magic/**"
     ],
     "coverageThreshold": {
       "global": {
