--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
+sonar.projectKey=statisticsnorway_dapla-migration-webclient
 sonar.scm.disabled=true
-sonar.sources=src
+sonar.sources=.
 sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**
 sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**
 sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums/**
